# job-scrapper

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICK_REFERENCE.md  README.md  README_SCRAPER.md  SECURITY.md  START_HERE.md  SYSTEM_OVERVIEW.md  api_server.py  auto_scraper.sh  automation_harness.html  check_jobs.sh  install.sh  job_monitor.py  job_scraper.py  live_dashboard.html  pdf_utils.py  pyproject.toml  requirements.txt  resume_pipeline.py  setup_alerts.sh  setup_auto_scraper.sh  source_registry.py  start.sh  start_server.sh
.claude/: CLAUDE.md
.claude/agents/api-docs/: api-docs.md
.claude/agents/architect/: architect.md
.claude/agents/code-analyzer/: code-analyzer.md
.claude/agents/coder/: coder.md
.claude/agents/devops/: devops.md
.claude/agents/issue-tracker/: issue-tracker.md
.claude/agents/performance/: performance.md
.claude/agents/planner/: planner.md
.claude/agents/production-validator/: production-validator.md
.claude/agents/project-owner/: project-owner.md
.claude/agents/release-manager/: release-manager.md
.claude/agents/reviewer/: reviewer.md
.claude/agents/security-auditor/: security-auditor.md
.claude/agents/standards-enforcer/: standards-enforcer.md
.claude/agents/tester/: tester.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  lint.yml  release.yml  security.yml  stale.yml
docs/: QUICK_REFERENCE.md  README_SCRAPER.md  SETUP_GUIDE.md  START_HERE.md  SYSTEM_OVERVIEW.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: auto_scraper.sh  browser_automation_run.mjs  check_jobs.sh  install.sh  run_today_tasks.py  setup_alerts.sh  setup_auto_scraper.sh  start_server.sh
src/jobintel/: __init__.py  api_server.py  application_autofill.py  application_materials.py  job_monitor.py  job_scraper.py  pdf_utils.py  resume_pipeline.py  source_registry.py
templates/: dashboard.html  live_dashboard.html
tests/: test_api_server.py  test_application_autofill.py  test_application_materials.py  test_job_scraper.py  test_resume_pipeline.py  test_source_registry.py
