[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobintel"
version = "1.0.0"
description = "AI-powered job scraping, resume matching, and tailored resume generation"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["jobs", "scraper", "resume", "ai", "automation"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
]
ignore = [
    "S101",    # assert used (OK in tests)
    "S603",    # subprocess call
    "S607",    # partial executable path
    "T201",    # print found (OK for CLI)
    "B904",    # raise from within except
    "S110",    # try-except-pass
    "S108",    # hardcoded temp directory
    "S602",    # subprocess shell=True
    "E501",    # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/jobintel"]
omit = [
    "venv/*",
    "tests/*",
    ".github/*",
    "data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.bandit]
exclude_dirs = ["venv", "tests", ".github"]
skips = ["B101", "B603", "B607"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
